documents/examples/good/small/09-13-binding5.latf
void fun() {
    println("fun"); 
}

int main() {
    if (true) {
        if (false) {

        }
        else {
            fun = lambda () -> void { println("changed fun"); };

            fun(); // changed fun
        }

        fun(); // changed fun
    }

    fun(); // changed fun

    return 0;
}