documents/examples/bad/09-13-binding2.latf
void fun() {
    println("fun"); 
}

int main() {
    if (true) {
        if (false) {
            bool fun = true;
        }
        else {
            int fun = 42;
        }
        println(fun); // error - not a basic type
    }

    return 0;
}